--- a/src/app/features/favorites/favorites-list/favorites-list.component.html
+++ b/src/app/features/favorites/favorites-list/favorites-list.component.html
@@ -1,1 +1,23 @@
-<p>favorites-list works!</p>
+<div class="flex flex-col items-center justify-start p-4 w-full">
+
+  <div class="w-full max-w-2xl mb-8">
+  </div>
+
+  <div class="w-full max-w-2xl mb-8">
+  </div>
+
+  <h2 class="text-2xl font-bold text-gray-800 mb-4">Your Favorite Facts</h2>
+
+  <div *ngIf="(hasFavorites$ | async) === false"
+    class="text-center p-8 bg-gray-100 border border-gray-300 text-gray-600 rounded-lg shadow-md max-w-md w-full">
+    <mat-icon class="text-6xl text-gray-400 !w-auto !h-auto">sentiment_dissatisfied</mat-icon>
+    <p class="mt-4 text-xl font-semibold">No Favorite Facts Yet!</p>
+    <p class="mt-2 text-md">Go to the "Random Fact" page and save some facts to see them here.</p>
+    <button mat-raised-button color="primary" routerLink="/random-fact" class="mt-4">Go to Random Fact Page</button>
+  </div>
+
+  <div *ngIf="hasFavorites$ | async" class="w-full max-w-2xl">
+    <app-favorite-item *ngFor="let fact of favorites$ | async" [fact]="fact" (remove)="onRemoveFavorite($event)"
+      class="block mb-3"></app-favorite-item>
+  </div>
+</div>
