--- a/src/app/features/favorites/search-input/search-input.component.html
+++ b/src/app/features/favorites/search-input/search-input.component.html
@@ -1,4 +1,4 @@
-<mat-form-field appearance="outline" class="w-full">
+<mat-form-field appearance="fill" class="w-full">
   <mat-label>Search Favorite Facts</mat-label>
   <input type="text" placeholder="Type to search..." aria-label="Search favorite facts" matInput
     [formControl]="searchControl" [matAutocomplete]="auto">
