--- a/src/app/features/random-fact/random-fact/random-fact.component.html
+++ b/src/app/features/random-fact/random-fact/random-fact.component.html
@@ -1,12 +1,11 @@
-<div class="flex flex-col items-center justify-center min-h-[calc(100vh-100px)] p-4">
-
+<div class="w-full max-w-4xl mx-auto py-4">
   <div *ngIf="isLoading" class="flex flex-col items-center justify-center p-8">
     <mat-spinner color="primary" diameter="50"></mat-spinner>
     <p class="mt-4 text-lg text-gray-700">Fetching a useless fact...</p>
   </div>
 
   <div *ngIf="error && !isLoading"
-    class="text-center p-8 bg-red-100 border border-red-400 text-red-700 rounded-lg shadow-md max-w-xl w-full">
+    class="text-center p-8 bg-red-100 border border-red-400 text-red-700 rounded-lg shadow-md max-w-xl w-full mx-auto">
     <mat-icon color="warn" class="text-4xl !w-auto !h-auto">error_outline</mat-icon>
     <p class="mt-2 text-lg font-semibold">Error:</p>
     <p class="text-sm">{{ error }}</p>
