refactor - UI: Fix responsiveness of the top nav bar.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary"
   class="shadow-xl z-10 relative px-3 sm:px-6 py-2 sm:py-4 flex flex-wrap justify-between items-center">
-  <span class="text-lg sm:text-2xl font-bold tracking-wide text-text-dark truncate max-w-[180px] sm:max-w-none">Useless
-    Facts Explorer</span>
+  <a routerLink="/" class="text-lg sm:text-2xl font-bold tracking-wide text-text-dark truncate max-w-[180px] sm:max-w-none cursor-pointer">Useless
+    Facts Explorer</a>
 
   <div class="flex items-center space-x-2 sm:space-x-4">
     <button mat-button routerLink="/random" routerLinkActive="font-bold border-b-2 border-text-dark opacity-100"
