--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,6 @@
   </div>
 </mat-toolbar>
 
-<div class="px-4 py-8 min-h-[calc(100vh-80px)] flex flex-col items-center justify-center relative z-0">
+<div class="px-4 py-8 min-h-[calc(100vh-80px)] flex flex-col items-center relative z-0">
   <router-outlet></router-outlet>
 </div>
