--- a/src/app/features/random-fact/random-fact/random-fact.component.html
+++ b/src/app/features/random-fact/random-fact/random-fact.component.html
@@ -20,23 +20,28 @@
     <button mat-raised-button color="accent" class="mt-4" (click)="fetchNewFact()">Try Again</button>
   </div>
 
-  <mat-card *ngIf="currentFact && !isLoading && !error" class="w-full max-w-2xl mx-auto p-8
-           rounded-3xl shadow-xl border border-gray-100
-           transform transition-all duration-300 ease-in-out
-           hover:scale-[1.01] hover:shadow-2xl hover:border-primary-100">
-    <mat-card-content class="text-center">
-      <p class="text-2xl md:text-3xl font-medium text-text-dark leading-relaxed italic"> "{{ currentFact.text }}"
-      </p>
-    </mat-card-content>
-    <mat-card-actions class="flex flex-col sm:flex-row justify-center mt-8 space-y-4 sm:space-y-0 sm:space-x-6">
-      <button mat-raised-button color="primary" (click)="fetchNewFact()"
-        class="w-full sm:w-auto py-3 px-6 text-lg rounded-full">
-        <mat-icon class="mr-2">refresh</mat-icon> Get New Fact </button>
-      <button mat-stroked-button [color]="isCurrentFactFavorite ? 'warn' : 'primary'" (click)="toggleFavorite()"
-        class="w-full sm:w-auto py-3 px-6 text-lg rounded-full">
-        <mat-icon class="mr-2">{{ isCurrentFactFavorite ? 'favorite' : 'favorite_border' }}</mat-icon>
-        {{ isCurrentFactFavorite ? 'Remove from Favorites' : 'Add to Favorites' }}
-      </button>
-    </mat-card-actions>
-  </mat-card>
+  <div class="w-full max-w-4xl mx-auto py-4">
+    <mat-card *ngIf="currentFact && !isLoading && !error" class="w-full max-w-2xl mx-auto p-8
+               rounded-3xl shadow-xl border border-gray-100
+               transform transition-all duration-300 ease-in-out
+               hover:scale-[1.01] hover:shadow-2xl hover:border-primary-100">
+      <mat-card-content class="text-center">
+        <p class="text-2xl md:text-3xl font-medium text-text-dark leading-relaxed italic"> "{{ currentFact.text }}"
+        </p>
+      </mat-card-content>
+
+      <mat-card-actions class="!flex !flex-col justify-center !mt-8 !space-y-4
+                                 md:!flex-row md:!space-x-6 md:!space-y-0">
+        <button mat-raised-button color="primary" (click)="fetchNewFact()"
+          class="!w-full md:!w-auto py-3 px-6 text-lg rounded-full">
+          <mat-icon class="mr-2">refresh</mat-icon> Get New Fact
+        </button>
+        <button mat-stroked-button [color]="isCurrentFactFavorite ? 'warn' : 'primary'" (click)="toggleFavorite()"
+          class="!w-full md:!w-auto py-3 px-6 text-lg rounded-full">
+          <mat-icon class="mr-2">{{ isCurrentFactFavorite ? 'favorite' : 'favorite_border' }}</mat-icon>
+          {{ isCurrentFactFavorite ? 'Remove from Favorites' : 'Add to Favorites' }}
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
 </div>
